fix dispaly on mobile

--- a/src/components/AbsoluteWrapper/AbsoluteWrapper.module.scss
+++ b/src/components/AbsoluteWrapper/AbsoluteWrapper.module.scss
@@ -1,7 +1,6 @@
 .wrapper {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  background: rgb(44, 44, 44);
   overflow: hidden;
 }
