--- a/src/components/WeatherWidget/WeatherWidget.module.scss
+++ b/src/components/WeatherWidget/WeatherWidget.module.scss
@@ -3,22 +3,12 @@
   position: absolute;
   bottom: 10px;
   left: 50%;
-  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   z-index: 9;
-  -webkit-transition: 1s all;
   transition: 1s all;
 
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 
   background-color: #fff;
@@ -26,31 +16,29 @@
     0 11px 5px -5px rgba(0, 0, 0, 0.5), 0 13px 0 -4px rgba(255, 255, 255, 0.7),
     0 16px 5px -5px rgba(0, 0, 0, 0.5), 0 20px 0 -8px rgba(255, 255, 255, 0.5);
 
+  @media (max-width: 600px) {
+    bottom: 8vh;
+  }
+
   &__active {
     @extend .wrapper;
-    -webkit-transition-delay: 0.5s;
     transition-delay: 0.5s;
-    -webkit-transform: translate(-50%, 110%);
     transform: translate(-50%, 110%);
   }
 }
 
 .form {
   padding: 2rem;
-  -webkit-transition: 1s all;
   transition: 1s all;
   z-index: -1;
 
   &__active {
     @extend .form;
     opacity: 0.1;
-    -webkit-transform: scale(0.8) translatey(100%);
     transform: scale(0.8) translatey(100%);
   }
 
   &__group {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   &__input {
@@ -80,14 +68,8 @@
   height: 50px;
   width: 50px;
   background-color: #b82f05;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   cursor: pointer;
   color: #fff;
